# wordler

./: Cargo.toml  README.md
src/: lib.rs  oracle.rs  wordlist.rs
src/oracle/: memory_oracle.rs  mod.rs
src/petitioner/: dict_solver.rs  human_petitioner.rs  mod.rs
