[package]
name = "wordler"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = { version = "3.3.2", optional = true }
dirs = { version = "4.0.0", optional = true }
rand = { version = "0.8.4", optional = true }
spinners = { version = "2.0.0", optional = true }
thiserror = "1.0.30"
ureq = { version = "2.3.1", features = ["tls", "gzip", "brotli"], optional = true}

[features]
default = []
memory_oracle = ["rand", "wordlist"]
wordlist = ["brotli", "dirs", "spinners", "ureq"]

[[bin]]
name = "init-cache"
required-features = ["wordlist"]
