[package]
name = "wordler"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = { version = "3.3.2", optional = true }
dirs = { version = "4.0.0", optional = true }
ezio = { version = "0.1.0", optional = true }
itertools = { version = "0.10.3", optional = true }
rand = { version = "0.8.4", optional = true }
spinners = { version = "2.0.0", optional = true }
termcolor = { version = "1.1.2", optional = true }
thiserror = "1.0.30"
ureq = { version = "2.3.1", features = ["tls", "gzip", "brotli"], optional = true}

[features]
default = []
dict_solver = ["itertools", "rand", "wordlist"]
human_petitioner = ["ezio", "pretty_feedback"]
memory_oracle = ["rand", "wordlist"]
pretty_feedback = ["itertools", "termcolor"]
wordlist = ["brotli", "dirs", "spinners", "ureq"]

[[bin]]
name = "init-cache"
required-features = ["wordlist"]

[[bin]]
name = "local-wordle"
required-features = ["human_petitioner", "memory_oracle"]

[[bin]]
name = "bot-match"
required-features = ["dict_solver", "memory_oracle"]
